unpackaged/main/default/objects/ETCAR_Service_Request_Sub_Line_Item__c/ETCAR_Service_Request_Sub_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Selected Features</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Service Request Sub Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>