unpackaged/main/default/objects/ETCAR_Service_Request_Sub_Line_Item__c/fields/ETCAR_Car_Features__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Car_Features__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Features</label>
    <referenceTo>ETCAR_Car_Features__c</referenceTo>
    <relationshipName>Service_Request_Sub_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>