unpackaged/main/default/objects/ETCAR_Service_Request_Sub_Line_Item__c/fields/ETCAR_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>