unpackaged/main/default/objects/ETCAR_Service_Request_Sub_Line_Item__c/fields/Service_Request_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Line_Item__c</fullName>
    <label>Service Request Line Item</label>
    <referenceTo>ETCAR_Service_Request_Line_Item__c</referenceTo>
    <relationshipName>Service_Request_Sub_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>